# weather_iot_bundle

./: .gitignore  README.md  databricks.yml  notes.md  pyproject.toml  requirements.txt
dlt_etl/bronze/: bronze.ipynb
dlt_etl/gold/: gold_bi.ipynb  gold_ds.ipynb  gold_ml.ipynb
dlt_etl/silver/: silver.ipynb
notebooks/: sample_notebook.ipynb
notebooks/bronze/: bronze.ipynb
notebooks/catalog/: catalog_creation.ipynb
notebooks/gold/: gold_bi.ipynb  gold_ds.ipynb  gold_ml.ipynb
notebooks/silver/: silver.ipynb
resources/: ingestion_job.job.yml  weather_iot_bundle_etl.pipeline.yml  weather_notebook.job.yml
src/day_time/: day_utils.py
src/local_time/: local_utils.py
src/weather_iot_bundle/: main.py
src/weather_iot_bundle_etl/: README.md
src/weather_iot_bundle_etl/transformations/: sample_trips_weather_iot_bundle.py  sample_zones_weather_iot_bundle.py
tests/: sample_taxis_test.py  test_daytime.py  test_localtime.py
